Imported from https://calculiTestUser@github.com/calculiTestUser/gr-sample.git

--- a/project.config
+++ b/project.config
@@ -1,4 +1,21 @@
 [access]
 	inheritFrom = All-Projects
 [submit]
-	action = inherit
+[access "refs/*"]
+	owner = group user/calculiTestUser
+[access "refs/for/refs/*"]
+	label-Code-Review = -2..+2 group user/calculiTestUser
+	label-Verified = -1..+1 group user/calculiTestUser
+	push = group user/calculiTestUser
+	read = group user/calculiTestUser
+	rebase = group user/calculiTestUser
+	removeReviewer = group user/calculiTestUser
+	submit = group user/calculiTestUser
+[access "refs/heads/*"]
+	create = group user/calculiTestUser
+	push = +force group user/calculiTestUser
+	pushMerge = group user/calculiTestUser
+	read = group user/calculiTestUser
+[access "refs/tags/*"]
+	push = group user/calculiTestUser
+	push = +force group user/calculiTestUser
