Modify access rules

--- a/project.config
+++ b/project.config
@@ -11,6 +11,7 @@
 	rebase = group user/calculiTestUser
 	removeReviewer = group user/calculiTestUser
 	submit = group user/calculiTestUser
+	exclusiveGroupPermissions = label-Code-Review label-Verified
 [access "refs/heads/*"]
 	create = group user/calculiTestUser
 	push = +force group user/calculiTestUser
